# feature_selection

./: .gitignore  pyproject.toml
designs/logic/: rest_api.py  sequential_feature_selection.py
ops/: Dockerfile_sql
ops/templates/: evaluation_job.yaml  sql.yaml  sql_password.template.yaml
sample_data/: request.json
src/: app.py
src/data_transfer/: adls.py  sql.py
src/enums/: environment_type.py  model.py
src/evaluation/: base.py  classification_evaluator.py
src/rest/: app.py  save_data.py  score_features.py
